@@ -1527,7 +1527,7 @@
 //-- SO_POISON_BUSTER
 2450,5000,1000,2000,0,0,0
 //-- SO_PSYCHIC_WAVE
-2449,9000,1000,5000,0,1000,5000
+2449,9000,1000,5000,0,1000,0
 //-- SO_CLOUD_KILL
 2450,4000,1000,5000,0,8000:10000:12000:14000:16000,10000
 //-- SO_STRIKING
